  like <code>(0..)</code> (or similarly <code>(0...)</code>).  [Feature #12912]

  The following shows typical use cases:

    ary[1..]                              # identical to ary[1..-1]
    (1...).each {|index| block }          # infinite loop from index 1
    ary.zip(1..) {|elem, index| block }   # ary.each.with_index(1) { }

* Non-Symbol keys in a keyword arguments hash cause an exception.

* The "shadowing outer local variable" warning is removed.  [Feature #12490]

  You can now write the following without warning:

    user = users.find {|user| cond(user) }

* Print +cause+ of the exception if the exception is not caught and printed
  its backtraces and error message. [Feature #8257]

* The flip-flop syntax is deprecated. [Feature #5400]

=== Core classes updates (outstanding ones only)

[Array]

  [New methods]

    * Added Array#union and Array#difference instance methods.  [Feature #14097]

  [Modified methods]

    * Array#to_h now accepts a block that maps elements to new key/value pairs.  [Feature #15143]

  [Aliased methods]

    * Array#filter is a new alias for Array#select. [Feature #13784]
    * Array#filter! is a new alias for Array#select!. [Feature #13784]

[Binding]

  [New methods]

    * Added Binding#source_location.  [Feature #14230]

      This method returns the source location of the binding, a 2-element
      array of <code>__FILE__</code> and <code>__LINE__</code>.
      Traditionally, the same information could be retrieved by
      <code>eval("[__FILE__, __LINE__]", binding)</code>, but we are
      planning to change this behavior so that Kernel#eval ignores
      binding's source location [Bug #4352].  So, users should use this
      newly-introduced method instead of Kernel#eval.

[Dir]

  [New methods]

    * Added Dir#each_child and Dir#children instance methods. [Feature #13969]

[Enumerable]

  [New methods]

    * Enumerable#chain returns an enumerator object that iterates over the